force-app/main/default/objects/ExpenseItem__c/ExpenseItem__c.object-meta.xml
<CustomObject>
    <label>Expense Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>