force-app/main/default/objects/ExpenseItem__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>Expense_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>