force-app/main/default/objects/ExpenseItem__c/fields/Expense_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>